@@ -1089,7 +1089,7 @@ ags_automation_find_near_timestamp(GList *automation, guint line,
   current_end = g_list_last(automation);
   
   length = g_list_length(automation);
-  position = length / 2;
+  position = (length - 1) / 2;
 
   current = g_list_nth(current_start,
 		       position);
@@ -1233,53 +1233,61 @@ ags_automation_find_near_timestamp(GList *automation, guint line,
 	
 	break;
       }
+    }
+    
+    g_object_get(current->data,
+		 "timestamp", &current_timestamp,
+		 NULL);
 
-      g_object_get(current->data,
-		   "timestamp", &current_timestamp,
-		   NULL);
+    if(current_timestamp != NULL){
+      if(use_ags_offset){
+	current_x = ags_timestamp_get_ags_offset(current_timestamp);
 
-      if(current_timestamp != NULL){
-	if(use_ags_offset){
-	  current_x = ags_timestamp_get_ags_offset(current_timestamp);
-
-	  g_object_unref(current_timestamp);
+	g_object_unref(current_timestamp);
 	  
-	  if(current_x >= x &&
-	     current_x < x + AGS_AUTOMATION_DEFAULT_OFFSET){
-	    retval = current;
+	if(current_x >= x &&
+	   current_x < x + AGS_AUTOMATION_DEFAULT_OFFSET &&
+	  current_line == line){
+	  retval = current;
 	    
-	    break;
-	  }
-	}else{
-	  current_x = ags_timestamp_get_unix_time(current_timestamp);
-
-	  g_object_unref(current_timestamp);
-	  
-	  if(current_x >= x &&
-	     current_x < x + AGS_AUTOMATION_DEFAULT_DURATION){
-	    retval = current;
-	    
-	    break;
-	  }
+	  break;
 	}
       }else{
-	g_warning("inconsistent data");
+	current_x = ags_timestamp_get_unix_time(current_timestamp);
+
+	g_object_unref(current_timestamp);
+	  
+	if(current_x >= x &&
+	   current_x < x + AGS_AUTOMATION_DEFAULT_DURATION &&
+	   current_line == line){
+	  retval = current;
+	    
+	  break;
+	}
       }
+    }else{
+      g_warning("inconsistent data");
     }
     
     if(length <= 3){
       break;
     }
 
-    position = position / 2;
-
     if(current_x < x){
       current_start = current->next;
       current_end = current_end->prev;
-    }else{
+    }else if(current_x > x){
       current_start = current_start->next;
       current_end = current->prev;
-    }    
+    }else{
+      current_start = current_start->next;
+      //NOTE:JK: we want progression
+      //current_end = current_end->prev;
+    }
+
+    length = g_list_position(current_start,
+			     current_end) + 1;
+    position = (length - 1) / 2;
 
     current = g_list_nth(current_start,
 			 position);
@@ -1330,7 +1338,7 @@ ags_automation_find_near_timestamp_extended(GList *automation, guint line,
   current_end = g_list_last(automation);
   
   length = g_list_length(automation);
-  position = length / 2;
+  position = (length - 1) / 2;
 
   current = g_list_nth(current_start,
 		       position);
@@ -1497,49 +1505,59 @@ ags_automation_find_near_timestamp_extended(GList *automation, guint line,
 		   channel_type) &&
        !g_strcmp0(current_control_name,
 		  control_name)){
-      g_free(current_control_name);
-      
       if(timestamp == NULL){
 	retval = current;
+
+	g_free(current_control_name);
 	
 	break;
       }
-
-      g_object_get(current->data,
-		   "timestamp", &current_timestamp,
-		   NULL);
-
-      if(current_timestamp != NULL){
-	if(use_ags_offset){
-	  current_x = ags_timestamp_get_ags_offset(current_timestamp);
-
-	  g_object_unref(current_timestamp);
-	  
-	  if(current_x >= x &&
-	     current_x < x + AGS_AUTOMATION_DEFAULT_OFFSET){
-	    retval = current;
-	    
-	    break;
-	  }
-	}else{
-	  current_x = ags_timestamp_get_unix_time(current_timestamp);
-
-	  g_object_unref(current_timestamp);
-	  
-	  if(current_x >= x &&
-	     current_x < x + AGS_AUTOMATION_DEFAULT_DURATION){
-	    retval = current;
-	    
-	    break;
-	  }
-	}
-      }else{
-	g_warning("inconsistent data");
-      }
-    }else{
-      g_free(current_control_name);
     }
     
+    g_object_get(current->data,
+		 "timestamp", &current_timestamp,
+		 NULL);
+
+    if(current_timestamp != NULL){
+      if(use_ags_offset){
+	current_x = ags_timestamp_get_ags_offset(current_timestamp);
+
+	g_object_unref(current_timestamp);
+	  
+	if(current_x >= x &&
+	   current_x < x + AGS_AUTOMATION_DEFAULT_OFFSET &&
+	   current_line == line &&
+	   g_type_is_a(current_channel_type,
+		       channel_type) &&
+	   !g_strcmp0(current_control_name,
+		      control_name)){
+	  retval = current;
+	    
+	  break;
+	}
+      }else{
+	current_x = ags_timestamp_get_unix_time(current_timestamp);
+
+	g_object_unref(current_timestamp);
+	  
+	if(current_x >= x &&
+	   current_x < x + AGS_AUTOMATION_DEFAULT_DURATION &&
+	   current_line == line &&
+	   g_type_is_a(current_channel_type,
+		       channel_type) &&
+	   !g_strcmp0(current_control_name,
+		      control_name)){
+	  retval = current;
+	    
+	  break;
+	}
+      }
+    }else{
+      g_warning("inconsistent data");
+    }
+    
+    g_free(current_control_name);
+      
     if(position == 0){
       break;
     }
@@ -1547,14 +1565,18 @@ ags_automation_find_near_timestamp_extended(GList *automation, guint line,
     if(current_x < x){
       current_start = current->next;
       current_end = current_end->prev;
-    }else{
+    }else if(current_x > x){
       current_start = current_start->next;
       current_end = current->prev;
-    }    
+    }else{
+      current_start = current_start->next;
+      //NOTE:JK: we want progression
+      //current_end = current_end->prev;
+    }
 
     length = g_list_position(current_start,
 			     current_end) + 1;
-    position = length / 2;
+    position = (length - 1) / 2;
 
     current = g_list_nth(current_start,
 			 position);
@@ -3341,7 +3363,7 @@ ags_automation_get_value(AgsAutomation *automation,
   current_end = g_list_last(acceleration);
   
   length = g_list_length(acceleration);
-  position = length / 2;
+  position = (length - 1) / 2;
 
   current = g_list_nth(current_start,
 		       position);
@@ -3406,14 +3428,18 @@ ags_automation_get_value(AgsAutomation *automation,
     if(current_x < x){
       current_start = current->next;
       current_end = current_end->prev;
-    }else{
+    }else if(current_x > x){
       current_start = current_start->next;
       current_end = current->prev;
-    }    
+    }else{
+      current_start = current_start->next;
+      //NOTE:JK: we want progression
+      //current_end = current_end->prev;
+    }
 
     length = g_list_position(current_start,
 			     current_end) + 1;
-    position = length / 2;
+    position = (length - 1) / 2;
 
     current = g_list_nth(current_start,
 			 position);
