@@ -413,8 +413,6 @@ ags_eq10_audio_signal_run_inter(AgsRecall *recall)
 	       NULL);
   ags_port_safe_read(port,
 		     &value);
-  
-  g_object_unref(port);
 
   peak_224hz = g_value_get_float(&value) / 2.0 - 0.01;
   g_value_reset(&value);
@@ -993,8 +991,11 @@ ags_eq10_audio_signal_run_inter(AgsRecall *recall)
   g_object_unref(recall_id);
     
   g_object_unref(recycling_context);
-  g_object_unref(parent_recycling_context);
 
+  if(parent_recycling_context != NULL){
+    g_object_unref(parent_recycling_context);
+  }
+  
   g_list_free_full(note,
 		   g_object_unref);
   
